FIX: cut off quick access notification

--- a/src/css/baseTheme/FriendList/quickAccess.css
+++ b/src/css/baseTheme/FriendList/quickAccess.css
@@ -36,7 +36,7 @@
 .quickAccessFriends .ChatUnreadMessageIndicator .chatUnreadCircle {
   position: relative;
   right: 0 !important;
-  bottom: -80% !important;
+  bottom: -60% !important;
   margin: 0 auto;
   box-shadow: 0 0 14px 1px rgb(var(--unreadmessage)),
     0 0 32px 1px rgb(var(--unreadmessage));
